=================

* docutils/setup.py

  - Fix [ 3527842 ]. Under Python 3, converted tests and tools are now
    stored in the ``test3/`` and ``tools3/`` sub-directories and not
    installed in the PYTHONPATH.

* docutils/test/

  - Make tests independent from the location of the ``test/`` directory.
  - Use converted sources from the ``build/`` directory for tests under
    Python 3.

* docutils/parsers/rst/directives/misc.py

  - Fix [ 3525847 ]. Catch and report UnicodeEncodeError with 
    ``locale == C`` and 8-bit char in path argument of `include` directive.

* docutils/test/alltests.py

  - class `Tee`: catch UnicodeError when writing to "ascii" stream or
    file under Python 3.
    
Release 0.9 (2012-05-02)
========================

* General:

  - New reStructuredText "code" role and directive and "code" option
    of the "include" directive with syntax highlighting by Pygments_.
  - Fix parse_option_marker for option arguments containing ``=``.
  - Fix [ 2993756 ]: import Python Imaging Library's Image module
    via ``import PIL`` as starting with PIL 1.2,
    "PIL lives in the PIL namespace only" (announcement__).

.. _Pygments: http://pygments.org/
__ http://mail.python.org/pipermail/image-sig/2011-January/006650.html

* setup.py

  - Fix [ 2971827 ] and [ 3442827 ]
    extras/roman.py moved to docutils/utils/roman.py

* docutils/frontend.py

  - Fix [ 3481980 ] Use os.getcwdu() in make_paths_absolute().

* docutils/io.py

  - Fix [ 3395948 ] (Work around encoding problems in Py3k).
  - `mode` argument for FileOutput avoids code replication in
    BinaryFileOutput.
  - New exceptions InputError and OutputError for IO errors in
    FileInput/FileOutput.

* docutils/core.py:

  - No "hard" system exit on file IO errors: catch and report them in
    `Publisher.reportException` instead. Allows handling by a calling
    application if the configuration setting `traceback` is True.

* docutils/utils.py -> docutils/utils/__init__.py
